--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -30,6 +30,7 @@
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/6/n11706071.md#1">大陆前体操冠军张尚武生活无着 因偷窃入狱</a><br>
 <br><p><a href="https://github.com/sloxqr240/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/28/n11751566.md#1">中共两省军区政委突然被免全国人大代表</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/28/n11750592.md#1">【翻墙必看】中共到了最后解体的时刻？</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/28/n11750767.md#1">擅闯美海军基地禁区拍照 中国男子被捕</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/28/n11750485.md#1">红色资金介入大选 台查获最大两岸地下汇兑</a><br>
@@ -41,7 +42,6 @@
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/28/n11750581.md#1">【拍案惊奇】香港水源是否完全依赖大陆？</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/28/n11751013.md#1">廖祖笙：周永康余孽在不断寻衅滋事</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749930.md#1">3万元鹤岗买房 学者：产业不振 人口外流</a><br>
-<a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/28/n11750919.md#1">民调：林郑评分较去年同期大跌30分</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/28/n11751072.md#1">为保经济增长 中共明年或增发10%地方债</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/26/n11747235.md#1">甘肃庆阳市法轮功学员被迫害情况综述（上）</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/28/n11751131.md#1">山东警察跨省抓捕 丁家喜等人下落不明</a><br>
