--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -31,7 +31,7 @@
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/12/n11718472.md#1" target="_blank">【三国英雄】之七：董卓之死（文字版）</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/12/n11718472.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/7-4-150x120.jpg" align ="left"></a>历史上孙权的父亲孙坚允文允武，可以说是一个大英雄，那么孙坚到底是个什么样的人？而国贼董卓又是怎么死的呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 8:43 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11744411.md#1" target="_blank">天地清明引(148) 东流水－天降神龙1</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11744411.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2011/12/1112190344391999_1-150x120.jpg" align ="left"></a>国子监。是夜风雷大作，狂风摧枝，雨打落花。大雨下了两个时辰，尚未歇息。子夜时分，轰然巨响，恰似奔雷裂于耳边，惊得众人皆醒。一众学子，窃窃私语，各房掌灯。窗外人影乱晃，有人奔走呼喊：“龙，龙，快看。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 8:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/7/n11707401.md#1" target="_blank">【品读唐诗】愈挫愈见豪气</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/7/n11707401.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/213a23e7c8ef98b99856403c7660efd8-150x120.png" align ="left"></a>读过《三国演义》的朋友，对刘皇叔刘备的身世都很熟悉了。因为他自我介绍时，总会说一句：我是中山靖王之后。这位中山靖王，就是汉景帝的第七个儿子刘胜。今天我们要谈到一位唐朝诗人，也可以套用这句话喔！他就是中唐著名的“诗豪”刘禹锡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 2:48 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/12/n11719123.md#1" target="_blank">广东茂名为何以道士的名字命名？</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/12/n11719123.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/06/PK2A001156N000000009PAA-e1530156682799-150x120.jpg" align ="left"></a>前段时间广东茂名化州地区村民抗议政府建造火葬场一事成为了海外媒体关注的热点之一，在村民们的抗争下，目前当地政府已宣布永不在此建造火葬场。说到茂名，不得不提到古代的一位著名的道士：潘茂名。可以说，茂名是广东省内唯一一座以古代名人名字命名的城市。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 1:54 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749650.md#1" target="_blank">唐浩：选战有道</a><br></h3>正邪搏斗争宝岛   红浪败沉一面倒   乱中有序浊恶拂   秋去春来显真道......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 12:09 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/28/n11751526.md#1" target="_blank">台湾古典诗：题《台湾汉诗三百首》</a><br></h3>珠玉无遗遍海东，匡时鉴古继唐风， 江河不废传三百，典律先贤砥柱功。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 10:38 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749461.md#1" target="_blank">唐浩：忧神州</a><br></h3>秋雨绵绵故绪浓   落枫片片载千愁   霾封中原惑难醒   遥望故土寒心忧......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 12:08 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749446.md#1" target="_blank">诗歌：愁</a><br></h3>滴滴雨声落檐头 寞寞夜半梦中愁 天上人间多少盼 又有多少盼未酬......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 8:20 PM			</td></tr>
