--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,6 +9,7 @@
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/26/n11746173.md#1">浙数千学子连续维权三天 抗议学校改名换制</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11745226.md#1">遭病人家属刺颈 北京一医院女医生伤重身亡</a><br>
 <br><p><a href="https://github.com/sloxqr240/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/28/n11751516.md#1">谢田：特朗普的“葛底斯堡”让沼泽震颤</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/28/n11751030.md#1">从原昆明市中级法院杨晓萍面临国际制裁说起</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/28/n11750943.md#1">吴惠林：再谈2019年诺贝尔经济学奖</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/28/n11750697.md#1">袁斌：“细颈瓶”成敏感词 折射中共末日心态</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11748173.md#1">高天韵：南亚海啸15年 2020灾害预言会否成真</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11748518.md#1">洪微：2020中国人最期待的预言</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11748249.md#1">任世豪：中共颠倒是非善恶</a><br>
-<a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11748135.md#1">廖祖笙：党天下法治和德治皆为无本之木</a><br>
 <br><p><a href="https://github.com/sloxqr240/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/14/n11722684.md#1">【独家】帮中共红色资本海外布局的神秘人物</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/6/n11705858.md#1">美中关系快速恶化 学者：新冷战已开始</a><br>
