--- a/gb/news2008.md
+++ b/gb/news2008.md
@@ -35,6 +35,8 @@
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743187.md#1" target="_blank">让食物更安全美味  微波炉热菜注意事项</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743187.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/10/Untitled-9-150x120.jpg" align ="left"></a>用微波炉加热剩菜时，有许多要点必须留意，才可以让食物更美味，并降低食物中毒的风险。以下，是重新加热食品时的注意事项。如果你家中也有微波炉，可千万要仔细浏览，用知识来守护自己与家人的健康。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 8:54 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743580.md#1" target="_blank">肾脏负责排出“体内废物” 保养肾脏的7个方法</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743580.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/kidney_519734128-1-150x120.jpg" align ="left"></a>肾脏是人体最主要的排泄器官，或称为“净化工厂”，负责排除体内的代谢废物。肾脏如此重要，我们要如何保护它？肾脏功能包括代谢产物如肌酐、尿素、尿酸等含氮物质或毒素，将随尿液排出体外。西医保养肾脏的秘诀
 。建议读者们平时多留意如下7个方面，保养好我们的肾脏，让身体更好地排出废物：1. 一定要多喝水。4. 别乱服药。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 5:37 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743677.md#1" target="_blank">温哥华征收4000万元房产空置税</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743677.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/DSC_0395-150x120.jpg" align ="left"></a>据美房置业网消息，温哥华市长肯尼迪·斯图尔特（Kennedy Stewart）说：“我们感谢所有缴纳房产空置的人，感谢他们为全市急需的经济适用房计划所提供的资金。”自2016年以来，温哥华市收取了近4,000万加元的房产空置税净收入。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 5:33 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/28/n11751650.md#1" target="_blank">汽车维修问与答：新车做油漆保护值得吗</a><br></h3>汽车维修问与答
+
+读者Andrew问：您好！李师傅，我的车是2009的Toyota RAV4，已走168,000公里，最近发现急转弯时发出吱吱的声音，换冬胎时叫师傅检查了一下，说是两个内拉杆松动，要更换，连工带料要$2,700加税。想向您请教一下，这种情况需要马上更换吗？我打算明年开春换夏胎时再找另一家询价后再换.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 12:30 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/news2008.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/news2008_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/news2008_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/news2008_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/news2008_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/news2008_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/news2008_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/news2008_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/news2008_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/news2008_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/sloxqr240/djy/blob/master/gb/news2008_2.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/sloxqr240/djy/blob/master/gb/news2008.md#1<br><a href="https://github.com/sloxqr240/djy/blob/master/gb/news2008.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/sloxqr240/djy/blob/master/gb/news2008.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2008.htm">http://www.epochtimes.com/gb/news2008.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
