--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -20,7 +20,7 @@
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11742170.md#1" target="_blank">诸葛高参：2019年终  只剩一人在假睡</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11742170.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/4bbaa1ff361bb71b6a164860ea0715d6-150x120.jpg" align ="left"></a>因为前边一直在劝一个人，所以看过我文的朋友都明白我指的这位假睡“大神”是谁。不过假睡还好，真睡过去，可能就杯具了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 3:24 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11741911.md#1" target="_blank">宋善：作恶者鉴：人不治天治</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11741911.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/95d4b9ee87d4abf9229f27be738525d0-600x400-150x120.jpg" align ="left"></a>随着中共长期灌输“无神论”的邪恶思想，现在许多中国人不相信神佛的存在，鄙视“三尺头上有神灵”为迷信，甚至口出狂言，无惧报应云云。在迫害法轮功学员的恶徒中，许多人甘为江氏集团的马前卒，自诩为“先进”，残害善良，终尝恶果。诸多报应昭彰不爽，正是上苍警示世人。以下有据可查的真实案例，发人省思，足堪炯戒。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 1:36 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11741816.md#1" target="_blank">徐曼沅：从张云雷被封杀想起相声大师吴兆南</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11741816.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1810141926482378-150x120.jpg" align ="left"></a>今年5月，中国大陆90后相声演员张云雷拿汶川地震“抖包袱”，遭中共官媒指责。随后事件持续发酵，张云雷的所有活动暂停，演出公告全面下架。12月5日中共文化和旅游部发布《关于进一步加强演出市场管理的通知（征求意见稿）》公开征求意见。中共对社会的监管从网络、视频、电视、出版物等方面扩展至说唱、相声等演出现场领域。今后脱口秀、.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 12:41 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/23/n11741399.md#1" target="_blank">横河：外交官被驱逐 中共套路碰壁</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/23/n11741399.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Chinese_Embassy_Washington_3212-600x400-1-150x120.jpg" align ="left"></a>主持人：这个星期根据媒体曝光，美国在上个月驱逐了两位中共的外交官，理由是从事间谍活动。这个事件是相当值得关注，因为这是美国30年来的第一次以从事间谍活动为理由驱逐中共的外交官。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 7:38 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/26/n11746793.md#1" target="_blank">陆言：从法轮功案看中共践踏基本法律原则</a><br></h3>法律之所以神圣与权威，就在于它的公平公正，离开了公平公正，法律就失去了它的神圣与权威。而法律面前人人平等则是法律公平公正的具体体现，能不能坚持法律面前人人平等，是衡量法律是否公平公正的一个重要标准。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 7:46 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11744970.md#1" target="_blank">中立：神必严惩中共百年罪恶</a><br></h3>共产主义宣扬的是收缴人民私人财产，从而剥夺人民的最基本的生存权，全面控制思想自由新闻舆论，以无神论思想彻底洗劫人的大脑，从幼儿园就开始彻底扼杀个人灵魂，以此让人民失去尊严，以杀人的方式逼迫人民服从，中共政权起家，从毛泽东的“枪杆子里出政权”，牢牢掌控武器弹药枪支和监狱是中共维护政权的表面自信和唯一法器。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 8:40 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11744948.md#1" target="_blank">云鹤天：《采桑子?重阳》新解</a><br></h3>贪官污吏黄赌毒，你也寻芳，他也寻芳，罂粟花儿分外香。
 今年过得真没劲，输得精光，陪得精光，贸战香江雪上霜。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 7:41 PM			</td></tr>
