--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -30,7 +30,7 @@
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/6/n11706071.md#1">大陆前体操冠军张尚武生活无着 因偷窃入狱</a><br>
 <br><p><a href="https://github.com/sloxqr240/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
-<a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/28/n11751566.md#1">中共两省军区政委突然被免全国人大代表</a><br>
+<a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/28/n11751566.md#1">中共两省军区政委突然被免全国人大代表资格</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/28/n11750592.md#1">【翻墙必看】中共到了最后解体的时刻？</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/28/n11750767.md#1">擅闯美海军基地禁区拍照 中国男子被捕</a><br>
 <a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/28/n11750485.md#1">红色资金介入大选 台查获最大两岸地下汇兑</a><br>
