--- a/gb/news2008.md
+++ b/gb/news2008.md
@@ -33,8 +33,11 @@
 .........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 1:15 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743755.md#1" target="_blank">一方沃土孕育《平安夜》 两百年后光环依旧</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743755.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/IMG_0464-1-150x120.jpg" align ="left"></a>1818年，201前的圣诞夜，在德奥边界离萨尔茨堡大约20公里的奥地利小城奥本多夫（Oberndorf）的圣．尼古劳斯教堂里，一曲《平安夜》（Stille Nacht，heilige Nacht）横空问世，逐渐成为世界上同一天被演唱次数最多的一首歌曲——圣诞之夜，全世界都在演唱这首歌。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 9:47 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743187.md#1" target="_blank">让食物更安全美味  微波炉热菜注意事项</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743187.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/10/Untitled-9-150x120.jpg" align ="left"></a>用微波炉加热剩菜时，有许多要点必须留意，才可以让食物更美味，并降低食物中毒的风险。以下，是重新加热食品时的注意事项。如果你家中也有微波炉，可千万要仔细浏览，用知识来守护自己与家人的健康。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 8:54 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743580.md#1" target="_blank">肾脏负责排出“体内废物” 保养肾脏的7个方法</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743580.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/kidney_519734128-1-150x120.jpg" align ="left"></a>肾脏是人体最主要的排泄器官，或称为“净化工厂”，负责排除体内的代谢废物。肾脏如此重要，我们要如何保护它？肾脏功能包括代谢产物如肌酐、尿素、尿酸等含氮物质或毒素，将随尿液排出体外。西医保养肾脏的秘诀
-。建议读者们平时多留意如下7个方面，保养好我们的肾脏，让身体更好地排出废物：1. 一定要多喝水。4. 别乱服药。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 5:37 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/28/n11751661.md#1" target="_blank">酒后汽车不让开</a><br></h3>仅在美国，每天就有30人在与酒后驾驶相关的交通事故中丧生。这相当于每48分钟就有一个人死于酒驾相关的事故。但问题是，现实中其实已经存在简单的技术可以防止，甚至可能杜绝酒后驾驶的。那么为什么汽车制造商不在新车上配置这种技术呢？
+
+&nbsp;
+
+美国旨在通过新的立法来使汽车制造商做到这一点：要求所有新车到2024.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 12:49 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/28/n11751650.md#1" target="_blank">汽车维修问与答：新车做油漆保护值得吗</a><br></h3>汽车维修问与答
 
 读者Andrew问：您好！李师傅，我的车是2009的Toyota RAV4，已走168,000公里，最近发现急转弯时发出吱吱的声音，换冬胎时叫师傅检查了一下，说是两个内拉杆松动，要更换，连工带料要$2,700加税。想向您请教一下，这种情况需要马上更换吗？我打算明年开春换夏胎时再找另一家询价后再换.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 12:30 AM			</td></tr>
