--- a/gb/news2008.md
+++ b/gb/news2008.md
@@ -1,11 +1,10 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/sloxqr240/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/sloxqr240/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/sloxqr240/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>生活消费</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/sloxqr240/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/sloxqr240/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/sloxqr240/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
-<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11750219.md#1" target="_blank">草莓护肤控血糖  清洗1招不让营养流失</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11750219.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/strawberry_591404918-copy-320x200.jpg" align ="left"></a>草莓多汁又甜美，受到大人小孩的喜爱。草莓具有高抗氧化力，草莓功效包括保护皮肤、控血糖和胆固醇，掌握清洗和食用技巧，可以让你吃到更多营养。草莓含有丰富植物化学物质，如花青素、儿茶素、槲皮素、山奈酚、鞣花酸以及维生素C。但草莓的外皮可能残留较多农药。在不去蒂、不伤果实的前提，可用如下方法把草莓表面的残留农药洗干净。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 1:34 AM	</td></tr>
+<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749701.md#1" target="_blank">【四维健康】医师析高以翔猝死原因  4方法预防运动猝死</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749701.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/sport-sudden-cardiac-death1--320x200.jpg" align ="left"></a>激烈运动确有可能造成猝死，怎样才能避免悲剧发生？艺人高以翔在录制高强度竞技运动节目中不幸猝死，经诊断是“心源性猝死”。运动时发生猝死有三大原因，比如人在长期运动、劳动下，没有充分补充电解质，造成心律失常。那么若要参加剧烈运动项目，怎样能防止猝死发生？在做剧烈运动前，要做准备和训练。长期不做大负荷运动，突然做......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 4:15 AM	</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/28/n11750967.md#1" target="_blank">车评：ProPILOT是自动驾驶吗？ 2020 Nissan Altima Platinum AWD</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/28/n11750967.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/IMG01-150x120.jpg" align ="left"></a>Nissan Altima属中型四门房车，然而四门房车在现今汽车市场上，有什么可以比SUV或CUV吸引呢？2020年Nissan Altima给了一个很好的答案。
 
 
 首先在汽车的外型设计，房车设计更为运动化，Maxima的轿跑化伸延到Altima，流线而低矮的车身，犹如一辆跑车，却拥有四个车门，再配上四个巨大车.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 1:59 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/28/n11750582.md#1" target="_blank">宠物能丰富生活 适合孩子饲养的8种动物</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/28/n11750582.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/shutterstock_689876338-150x120.jpg" align ="left"></a>让孩童饲养宠物有许多好处，照顾动物的同时，孩子也能学到生物知识和照顾技巧。研究也指出，家中有饲养宠物的孩子，免疫力比没有饲养宠物的孩子好。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 12:50 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749701.md#1" target="_blank">【四维健康】医师析高以翔猝死原因  4方法预防运动猝死</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11749701.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/sport-sudden-cardiac-death1--150x120.jpg" align ="left"></a>激烈运动确有可能造成猝死，怎样才能避免悲剧发生？艺人高以翔在录制高强度竞技运动节目中不幸猝死，经诊断是“心源性猝死”。运动时发生猝死有三大原因，比如人在长期运动、劳动下，没有充分补充电解质，造成心律失常。那么若要参加剧烈运动项目，怎样能防止猝死发生？在做剧烈运动前，要做准备和训练。长期不做大负荷运动，突然做......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 4:15 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11745370.md#1" target="_blank">组图：2019世界各地欢庆圣诞节</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11745370.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Christmas-150x120.jpg" align ="left"></a>每年圣诞节前夕，世界各地都会举办活动，为圣诞节的到来暖场，其中也有许多活动需要扮装。今日挑选来自法新社与GETTY的精选图片，与大家分享各地的人们都是怎么同乐的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 11:09 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/26/n11746968.md#1" target="_blank">动物收容所让流浪狗挑礼物 狗狗神情融化人心</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/26/n11746968.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/52e05eb67cf48e134fa55dde6cfe75a7-150x120.jpg" align ="left"></a>圣誔节是个欢乐的日子，动物庇护所收留很多只曾经被遗弃的流浪狗，他们认为住在那里的狗狗也一样要得到一份圣誔节礼物；挑选礼物的时间到了，从视频中可以从狗狗们快乐的神情中看到另一种融化人心的圣誔气息！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 7:28 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/26/n11747071.md#1" target="_blank">记得出生后的每一刻 澳洲女出书分享超强记忆力</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/26/n11747071.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1e5aa34c37c3f4184d9127e6776eab22-150x120.jpg" align ="left"></a>我们大都希望自己记忆力好一点，不过一位澳洲女子倒希望自己能忘事。29岁的夏洛克记得从出生到现在身边发生过的每一件事情和细节。她日前出书，写下了自己的超记忆；来看看似乎是令人称羡的超记忆，为何变成夏洛克无法摆脱的魔咒呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 7:18 PM			</td></tr>
@@ -33,6 +32,7 @@
 在卡城的Bolero巴西烧烤店，尝尽13道烤肉后，相信在食客的眼里、口中、心头，巴西已不再是足球的代名词，而是迅速化成铁签上滋滋作响、油花四溢的大块牛肉、羊腿、猪排、鸡翅。
 .........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 1:15 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743755.md#1" target="_blank">一方沃土孕育《平安夜》 两百年后光环依旧</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743755.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/IMG_0464-1-150x120.jpg" align ="left"></a>1818年，201前的圣诞夜，在德奥边界离萨尔茨堡大约20公里的奥地利小城奥本多夫（Oberndorf）的圣．尼古劳斯教堂里，一曲《平安夜》（Stille Nacht，heilige Nacht）横空问世，逐渐成为世界上同一天被演唱次数最多的一首歌曲——圣诞之夜，全世界都在演唱这首歌。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 9:47 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743187.md#1" target="_blank">让食物更安全美味  微波炉热菜注意事项</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743187.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/10/Untitled-9-150x120.jpg" align ="left"></a>用微波炉加热剩菜时，有许多要点必须留意，才可以让食物更美味，并降低食物中毒的风险。以下，是重新加热食品时的注意事项。如果你家中也有微波炉，可千万要仔细浏览，用知识来守护自己与家人的健康。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 8:54 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/28/n11751661.md#1" target="_blank">酒后汽车不让开</a><br></h3>仅在美国，每天就有30人在与酒后驾驶相关的交通事故中丧生。这相当于每48分钟就有一个人死于酒驾相关的事故。但问题是，现实中其实已经存在简单的技术可以防止，甚至可能杜绝酒后驾驶的。那么为什么汽车制造商不在新车上配置这种技术呢？
 
 &nbsp;
