--- a/gb/news392_5.md
+++ b/gb/news392_5.md
@@ -28,7 +28,14 @@
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/16/n11726911.md#1" target="_blank">洪达：祝贺神韵2020全球巡回演出</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/16/n11726911.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1901140106381973-600x400-150x120.jpg" align ="left"></a>在圣诞节即将来临之际，神韵艺术团将于十二月二十日展开二零二零年的全球巡回演出季之旅，预计覆盖约20个国家、近160个城市，演出场次七百余，规模为历年之最，逾百万人次观众将有幸欣赏“世界第一秀”的演出，共享丰盛的心灵飨宴。此全球艺文界的盛事佳话，深值庆贺。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 7:48 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/16/n11726663.md#1" target="_blank">周晓辉：高调关注中共盗版仿制 俄补刀不简单</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/16/n11726663.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1506052148492039-600x400-150x120.jpg" align ="left"></a>中共的所作所为，连曾经在诸多问题上支持其的俄罗斯也看不下去了，中共联俄制美的算盘恐难以实现。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 5:06 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/16/n11726670.md#1" target="_blank">张林：抵抗共产暴政，香港人赢了第一回合</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/16/n11726670.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1911270654462188-600x400-150x120.jpg" align ="left"></a>为期半年的激烈抗争，香港抗争者无疑已经击败中南海，赢了第一回合。尽管这不是终局，香港自由之路还很漫长。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 4:58 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/16/n11726640.md#1" target="_blank">张菁： 由中共开“世界律师大会”想到的</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/16/n11726640.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/c700ac8e244d0376578408ea8552d6db-600x400-150x120.jpg" align ="left"></a>大是大非面前，唯有运用智慧，多听真相，独立思考，从善如流，尽快退出中共，才能避免灾难，给自己和家人一个看得到的光明未来。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 4:55 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/19/n11732211.md#1" target="_blank">陆客：末世民风（三）</a><br></h3>高官偷偷在跑路
+骗子傻子放烟雾
+洗脑群众受害多
+是非不辨假爱国
+好话说给好人听
+真伪善恶要看清
+面对新闻多想想
+x党专骗老百姓......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 2:46 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/19/n11731471.md#1" target="_blank">王赫：中共首艘自制航母入列日期的玄机</a><br></h3>12月17日，舷号为17的中共第一艘国产航空母舰山东舰在海南省三亚军港入列，习近平出席仪式、授旗。这有一个“巧合”：历史上的今天，1888年12月17日（清光绪十四年冬月十五），北洋水师于山东威海卫刘公岛正式成立。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 8:42 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/18/n11731117.md#1" target="_blank">张林：毛泽东靠什么为所欲为？</a><br></h3>毛泽东本来是苏联独裁者史达林扶植的儿皇帝，但是他的管理共产党的手段，与苏联人主要依靠制度，有很大的不同。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 4:13 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/18/n11729906.md#1" target="_blank">云鹤天：中共的心态</a><br></h3>旷日持久贸易战
