--- a/gb/news2008.md
+++ b/gb/news2008.md
@@ -29,7 +29,10 @@
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743069.md#1" target="_blank">猫咪当红娘隔空牵红线 英男飞越4000英里会美女</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/24/n11743069.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/8438e77d5f6a97d31f45fbe611021e4c-150x120.jpg" align ="left"></a>没想到猫咪也会当红娘，它牵起4000英里外的英国和美国的一对男女的缘分，这可不是电影情节，而是真实发生在这个月初的事情，我们来看看这个可爱的爱情故事是怎么发生的？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 8:40 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/19/n11732594.md#1" target="_blank">桑椹延年益寿好处多 桑椹膏和桑椹茶的作法</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/19/n11732594.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/0edc6fc2be77aaa51858b9b2caced2be-150x120.jpg" align ="left"></a>桑椹叶泡茶饮用可延年益寿，故又称为“神仙茶”，便依样画葫芦叫先生为我采桑叶制茶，循一般制茶过程，洗净叶片曝日杀青萎凋，装入网袋中揉制成茶青，静置一晚使其发酵，隔天用干净的炒锅小火慢焙，完全干燥后虽成碎片状却茶香四溢，闻来令人神清气爽，宛若神仙。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 3:49 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11744104.md#1" target="_blank">韩国小狗在“幼儿园”排排睡 可爱极了</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11744104.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-867986808-150x120.jpg" align ="left"></a>韩国一家专为年幼宠物狗开设的“幼儿园”经常在网上分享这些小狗的生活照，其中包括它们集体睡午觉的场景。只见它们在排列整齐的床铺上乖乖睡觉，真是可爱极了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 1:38 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/27/n11747770.md#1" target="_blank">房子越来越贵 合力买房 或成趋势</a><br></h3>大多伦多地区房价飙升，越来越多人买不起房。既然凭一己之力买不起房，许多人就想到通过与人合买房，实现房主梦。大多区一位居民早在20年前，就通过这个办法实现家园梦想。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 6:39 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11744018.md#1" target="_blank">巴西烤肉十三道 道道桑巴风味足</a><br></h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/25/n11744018.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Bolero-1-150x120.jpg" align ="left"></a>提起巴西，浮现在你脑海里的会是什么？热血沸腾的足球、绿黄相映的国旗、激情四射的桑巴舞，或者，俯瞰众生的基督像？似乎，很少人会想到美食。
+
+在卡城的Bolero巴西烧烤店，尝尽13道烤肉后，相信在食客的眼里、口中、心头，巴西已不再是足球的代名词，而是迅速化成铁签上滋滋作响、油花四溢的大块牛肉、羊腿、猪排、鸡翅。
+.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 1:15 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/sloxqr240/djy/blob/master/gb/19/12/28/n11751661.md#1" target="_blank">酒后汽车不让开</a><br></h3>仅在美国，每天就有30人在与酒后驾驶相关的交通事故中丧生。这相当于每48分钟就有一个人死于酒驾相关的事故。但问题是，现实中其实已经存在简单的技术可以防止，甚至可能杜绝酒后驾驶的。那么为什么汽车制造商不在新车上配置这种技术呢？
 
 &nbsp;
