--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -30,6 +30,7 @@
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/6/n11706071.md#1">大陆前体操冠军张尚武生活无着 因偷窃入狱</a><br>
 <br><p><a href="https://github.com/mchnr2468/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752063.md#1">黄之锋入选金融时报全球50大重要人物</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/28/n11751906.md#1">台总统辩论29日14点登场 蔡韩宋直接对决</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/28/n11751864.md#1">内蒙古公安警官枪杀两副局长 当局封口</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/28/n11751850.md#1">中国内衣大王断崖式亏损 4年关店1500家</a><br>
@@ -41,7 +42,6 @@
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/28/n11751579.md#1">张俊勇辞去港区人大代表 曾被赌场追债</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/28/n11751566.md#1">中共两省军区政委突然被免全国人大代表资格</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/26/n11747468.md#1">【2019盘点】中国经济十大困局</a><br>
-<a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/28/n11750773.md#1">纽约华裔评选“川普时代”代表字</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/28/n11751771.md#1">美参院两党有望快速解决弹劾川普案</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/28/n11751733.md#1">中共利用社媒攻击他国 专家：像个巨魔</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/16/n11724729.md#1">大国竞争？美军火速打造超火力超射程武器</a><br>
