--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -30,6 +30,7 @@
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/6/n11706071.md#1">大陆前体操冠军张尚武生活无着 因偷窃入狱</a><br>
 <br><p><a href="https://github.com/mchnr2468/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752311.md#1">【翻墙必看】内蒙古公安警官开枪打死两官</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752148.md#1">港警官吐露心声：被迫处于冲突中心 支持调查</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752042.md#1">【珍言真语】薛浩然：不想香港沉没 只能团结</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752063.md#1">黄之锋入选金融时报全球50大重要人物</a><br>
@@ -41,7 +42,6 @@
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/28/n11751783.md#1">台湾大选前夕 中共出动航母后又立法利诱</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/28/n11751714.md#1">【新闻看点】危机来了？官称过紧日子及防暴动</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/28/n11751676.md#1">曹兴诚批九二共识胡说八道 专家赞他有勇气</a><br>
-<a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/28/n11751579.md#1">张俊勇辞去港区人大代表 曾被赌场追债</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/28/n11751793.md#1">美癌症中心高层人事突变 曝光中共何种野心</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/28/n11751771.md#1">美参院两党有望快速解决弹劾川普案</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/28/n11751733.md#1">中共利用社媒攻击他国 专家：像个巨魔</a><br>
