--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,7 +9,7 @@
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/25/n11745226.md#1">遭病人家属刺颈 北京一医院女医生伤重身亡</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/22/n11739024.md#1">传中共红三代涉持枪强奸下属 警方不调查</a><br>
 <br><p><a href="https://github.com/mchnr2468/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
-<a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752368.md#1">风：移民美国  隐瞒共产党员身份有麻烦</a><br>
+<a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752368.md#1">海风：移民美国 隐瞒共产党员身份有麻烦</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752237.md#1">袁斌：成都“飞车党事件”与痛风酒发明人猝死</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/28/n11751711.md#1">张林：青少年被迫加入抗美援朝志愿军</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/28/n11751030.md#1">从原昆明市中级法院杨晓萍面临国际制裁说起</a><br>
