--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,6 +9,7 @@
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/25/n11745226.md#1">遭病人家属刺颈 北京一医院女医生伤重身亡</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/22/n11739024.md#1">传中共红三代涉持枪强奸下属 警方不调查</a><br>
 <br><p><a href="https://github.com/mchnr2468/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752482.md#1">洪微：美国建太空军 中共沮丧</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752368.md#1">海风：移民美国 隐瞒共产党员身份有麻烦</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752237.md#1">袁斌：成都“飞车党事件”与痛风酒发明人猝死</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/28/n11751711.md#1">张林：青少年被迫加入抗美援朝志愿军</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/27/n11749390.md#1">东方觉：辛苦农民工 讨薪路上难</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/27/n11748931.md#1">陆客：在大陆政治学习学出三个更正</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/21/n11737584.md#1">李旭彤：挖掘五千年文明惊世宝藏（11）</a><br>
-<a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/27/n11748707.md#1">王友群：中共的解体可能快速发生？</a><br>
 <br><p><a href="https://github.com/mchnr2468/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/14/n11722684.md#1">【独家】帮中共红色资本海外布局的神秘人物</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/6/n11705858.md#1">美中关系快速恶化 学者：新冷战已开始</a><br>
@@ -93,7 +93,7 @@
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/mchnr2468/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
-- 共 348,835,236 人
+- 共 348,838,362 人
 ```
 </strong>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/11/19/n11666092.md#1">九评15周年 看大陆民众弃中共 句句真情</a><br>
