--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,6 +9,7 @@
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/25/n11745226.md#1">遭病人家属刺颈 北京一医院女医生伤重身亡</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/22/n11739024.md#1">传中共红三代涉持枪强奸下属 警方不调查</a><br>
 <br><p><a href="https://github.com/mchnr2468/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/28/n11751284.md#1">岳高：读书被关押的奇闻</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752526.md#1">王友群：中共在香港问题的十大谎言</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752482.md#1">洪微：美国建太空军 中共沮丧</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752368.md#1">海风：移民美国 隐瞒共产党员身份有麻烦</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/27/n11750032.md#1">程晓农：经济全球化的中共陷阱</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/27/n11749651.md#1">【2019盘点】中共社会监控的极端化</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/27/n11749390.md#1">东方觉：辛苦农民工 讨薪路上难</a><br>
-<a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/27/n11748931.md#1">陆客：在大陆政治学习学出三个更正</a><br>
 <br><p><a href="https://github.com/mchnr2468/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/14/n11722684.md#1">【独家】帮中共红色资本海外布局的神秘人物</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/6/n11705858.md#1">美中关系快速恶化 学者：新冷战已开始</a><br>
